--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ ExportedFiles.xml
 # Force include portal SupportFiles
 !Model/Portal/*/SupportFiles/[Bb]in/
 !Model/Portal/PortalTemplates/*/SupportFiles/[Bb]in
+.fake
