--- a/packages.config
+++ b/packages.config
@@ -27,6 +27,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net472" />
+  <package id="NLog" version="5.2.5" targetFramework="net472" />
   <package id="ServiceStack.Client" version="6.11.0" targetFramework="net472" />
   <package id="ServiceStack.HttpClient" version="6.11.0" targetFramework="net472" />
   <package id="ServiceStack.Interfaces" version="6.11.0" targetFramework="net472" />
