--- a/webleitour.csproj
+++ b/webleitour.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Container\Controllers\PostController.cs" />
     <Compile Include="Container\Controllers\UserController.cs" />
     <Compile Include="Container\Models\User.cs" />
+    <Compile Include="Container\Models\UserGeralModel.cs" />
     <Compile Include="Container\Models\UserModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
