--- a/webleitour.csproj
+++ b/webleitour.csproj
@@ -233,6 +233,7 @@
     <Content Include="Images\arroba.svg" />
     <Content Include="Images\key.svg" />
     <Content Include="Images\LogoLeitour.svg" />
+    <Content Include="Images\nameuser.svg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -267,6 +268,7 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\Perfil.cshtml" />
+    <Content Include="Views\User\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
