[implementation/bug] criação de funcionalidade tela de registro

--- a/webleitour.csproj
+++ b/webleitour.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Container\Controllers\UserController.cs" />
     <Compile Include="Container\Models\Book.cs" />
     <Compile Include="Container\Models\CreatePost.cs" />
+    <Compile Include="Container\Models\RegisterUserModel.cs" />
     <Compile Include="Container\Models\User.cs" />
     <Compile Include="Container\Models\UserGeralModel.cs" />
     <Compile Include="Container\Models\UserModel.cs" />
